--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
 .box-shadow1 {
   box-shadow: 0px 4px 16.4px 0px #0000004f;
 }
+
 .bg-gradient__popular {
   background: radial-gradient(
     76.09% 100% at 50% 0%,
@@ -40,6 +41,7 @@
 
   box-shadow: 0px 4px 16.4px 0px #0000004f;
 }
+
 .bg-gradietn {
   background: linear-gradient(
     180deg,
@@ -60,12 +62,16 @@
   content: "";
   @apply absolute top-1/3 right-0 translate-x-1/2 -translate-y-1/2 rotate-45 bg-[#220F1C] size-2;
 }
+/* 
+.bg-image {
+  background: url('./assets/svg/light-boarder.svg') no-repeat;
+  background-size: 100%;
+} */
+
 .text-gradient {
   color: #634357;
-  text-shadow: 2px 2px 0 #1a001f, -2px 2px 0 #1a001f,
-     2px -2px 0 #1a001f,
-     -2px -2px 0 #1a001f,
-    0px 5px 10px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 0 #1a001f, -2px 2px 0 #1a001f, 2px -2px 0 #1a001f,
+    -2px -2px 0 #1a001f, 0px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* Scroll styles */
