--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,9 @@
 }
 
 .bg-gradient {
-  background: radial-gradient(
-    76.09% 100% at 50% 0%,
-    rgba(57, 33, 48, 0.5) 0%,
-    rgba(23, 6, 18, 0.5) 100%
-  );
+  background: radial-gradient(76.09% 100% at 50% 0%,
+      rgba(57, 33, 48, 0.5) 0%,
+      rgba(23, 6, 18, 0.5) 100%);
   box-shadow: 0px 4px 16.4px 0px #0000004f;
 }
 
@@ -32,22 +30,18 @@
 }
 
 .bg-gradient__popular {
-  background: radial-gradient(
-    76.09% 100% at 50% 0%,
-    rgba(69, 40, 58, 0.6) 0%,
-    rgba(36, 19, 31, 0.6) 100%
-  );
+  background: radial-gradient(76.09% 100% at 50% 0%,
+      rgba(69, 40, 58, 0.6) 0%,
+      rgba(36, 19, 31, 0.6) 100%);
   backdrop-filter: blur(4.5px);
 
   box-shadow: 0px 4px 16.4px 0px #0000004f;
 }
 
 .bg-gradietn {
-  background: linear-gradient(
-    180deg,
-    rgba(155, 102, 136, 0.8) 0%,
-    rgba(80, 49, 70, 0.8) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(155, 102, 136, 0.8) 0%,
+      rgba(80, 49, 70, 0.8) 100%);
   box-shadow: 0px 4px 16.4px 0px #0000004f;
   backdrop-filter: blur(2.5px);
   @apply overflow-hidden rounded-full border-2 border-[#9b718c];
@@ -62,16 +56,26 @@
   content: "";
   @apply absolute top-1/3 right-0 translate-x-1/2 -translate-y-1/2 rotate-45 bg-[#220F1C] size-2;
 }
+
 /* 
 .bg-image {
   background: url('./assets/svg/light-boarder.svg') no-repeat;
   background-size: 100%;
 } */
 
+.bg-gradient__2 {
+  background: radial-gradient(76.09% 100% at 50% 0%, #533247 0%, #391F31 100%);
+}
+
 .text-gradient {
   color: #634357;
   text-shadow: 2px 2px 0 #1a001f, -2px 2px 0 #1a001f, 2px -2px 0 #1a001f,
     -2px -2px 0 #1a001f, 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.text-gradient__2 {
+  background: linear-gradient(0deg, #FFFFFF, #FFFFFF),
+    linear-gradient(180deg, #FBDBF0 0%, #D4AAC6 100%);
 }
 
 /* Scroll styles */
